--- a/.travis.yml
+++ b/.travis.yml
@@ -20,13 +20,13 @@ script:
   - docker build -t udagram-api-user ./udagram-api-user
   - docker build -t udagram-api-feed ./udagram-api-feed
   - docker tag udagram-frontend thachnamtrang/udagram-frontend:latest
-  - docker tag udagram-frontend thachnamtrang/reverseproxy:latest
-  - docker tag udagram-frontend thachnamtrang/udagram-api-user:latest
-  - docker tag udagram-frontend thachnamtrang/udagram-api-feed:latest
+  - docker tag reverseproxy thachnamtrang/reverseproxy:latest
+  - docker tag udagram-api-user thachnamtrang/udagram-api-user:latest
+  - docker tag udagram-api-feed thachnamtrang/udagram-api-feed:latest
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push thachnamtrang/udagram-frontend:lastest
-  - docker push thachnamtrang/reverseproxy:lastest
-  - docker push thachnamtrang/udagram-api-user:lastest
-  - docker push thachnamtrang/udagram-api-feed:lastest
+  - docker push thachnamtrang/udagram-frontend
+  - docker push thachnamtrang/reverseproxy
+  - docker push thachnamtrang/udagram-api-user
+  - docker push thachnamtrang/udagram-api-feed
